k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-hr
  labels:
    app.kubernetes.io/part-of: nexus-hr-system
