k8s/05-employee-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
  namespace: nexus-hr
  labels:
    app: employee-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
        - name: employee-service
          image: ghcr.io/endrit296/nexus-hr-employee-service:latest
          ports:
            - containerPort: 3002
              name: http
            - containerPort: 50051
              name: grpc
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: nexus-hr
spec:
  selector:
    app: employee-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
    - name: grpc
      port: 50051
      targetPort: 50051
